--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="telechege"><button> <a
-                                                                href="./image/cv_mehdi_halfya.pdf" download> techeger
+                                                                href="./image/cv_mehdi_halfya.pdf" download> Télécharger 
                                                                 cv</a></button></div>
 
                                                 </div>
