--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="col-12 col-md-7">
                                     <div class="text-decrpson">
-                                        <h4>Salut</h4>
+                                        <h4>Bonjour</h4>
                                         <h2 class="">Je suis <span> El Mehdi Halfya</span></h2>
                                         <p>
                                             Je suis un concepteur Web et un développeur front-end basé en casablanca ,
@@ -769,11 +769,11 @@
                             </a>
 
                             <a href="#block2">
-                                <div class="link"><img src="./image/icone3.PNG" /></div>
+                                <div class="link"><img src="./image/icone4.PNG" /></div>
                             </a>
 
                             <a href="#block3">
-                                <div class=" link"><img src="./image/icone4.PNG" />
+                                <div class=" link"><img src="./image/icone3.PNG" />
                                 </div>
                             </a>
 
